--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     </head>
     <body>
         <h1>Slider:)</h1>
+        <div class=" slider">
+            <img src="assests/aerial-top-view-forest-tree-260nw-639949456.webp" alt="img1">
+            <img src="assests/assortiment-elements-du-vendredi-noir_23-2149074076.jpg" alt="img2">
+            <img src="assests/modele-couverture-facebook-super-vente-black-friday_106176-1588.avif" alt="img3">
+            <img src="assests/panorama-foggy-forest-fairy-tale-260nw-1123858610.webp" alt="img4">
+
+        </div>
     </body>
     <script src="./main.js"></script>
 </html>
