--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <h1>Slider:)</h1>
+        <div class="slider" id="slider1"></div>
+        <button class="prev">Prev</button>
+        <button class="next">Next</button>
     </body>
     <script src="./main.js"></script>
 </html>
